--- a/thermostat.yaml
+++ b/thermostat.yaml
@@ -1,294 +1,178 @@
 blueprint:
-  name: Automatic air conditioner for winter and summer, monitoring presence, window status, water level and time slot.
-  description: |
-    - Version: 1.0 -
-    This blueprint is for using the air conditioner automatically in both winter and summer, based on a start and end temperature.
-
-    Optionally, you can enable:
-      - Window status check
-      - Water level control in the tank
-      - Home presence control
-      - Notifications (English only)
-      - Decide on the time slot for operation
-
+  name: HVAC Auto On/Off with Energy Savings & Presence
+  description: "Automated HVAC control with delays, presence, notifications, and no extra helpers"
   domain: automation
-  input:
 
-    climate:
-      name: Entities climate
-      description: 'Select climate entities to be used.'
-      selector:
-        entity:
-          domain: climate
+input:
+  climate_entity:
+    name: Climate Entity
+    description: "Select your HVAC climate entity"
+    selector:
+      entity:
+        domain: climate
+  start_time:
+    name: Start Time
+    description: "Time to turn on HVAC (24h format, e.g. 08:00:00)"
+    selector:
+      time:
+  end_time:
+    name: End Time
+    description: "Time to turn off HVAC (24h format, e.g. 22:00:00)"
+    selector:
+      time:
+  hvac_mode_on:
+    name: HVAC Mode (On)
+    description: "HVAC mode to set when turning on (e.g. heat, cool, auto)"
+    default: auto
+    selector:
+      select:
+        options:
+          - heat
+          - cool
+          - auto
+          - dry
+          - fan_only
+  hvac_mode_off:
+    name: HVAC Mode (Off)
+    description: "HVAC mode to set when turning off (e.g. off, auto)"
+    default: off
+    selector:
+      select:
+        options:
+          - off
+          - auto
+  target_temp_f:
+    name: Target Temperature (°F)
+    description: "Set the temperature in Fahrenheit"
+    default: 72
+    selector:
+      number:
+        min: 60
+        max: 90
+        step: 1
+        unit_of_measurement: °F
+  notify_service:
+    name: Notification Service
+    description: "Optional: Select a notification service (e.g. notify.mobile_app_phone)"
+    required: false
+    selector:
+      entity:
+        domain: notify
+  notify_message_on:
+    name: Notification Message (On)
+    description: "Optional: Message to send when HVAC turns on"
+    default: "HVAC is now on."
+    required: false
+    selector:
+      text:
+  notify_message_off:
+    name: Notification Message (Off)
+    description: "Optional: Message to send when HVAC turns off"
+    default: "HVAC is now off."
+    required: false
+    selector:
+      text:
+  enable_presence_detection:
+    name: Enable Presence Detection
+    description: "Check this to only run automation when someone is home"
+    default: false
+    selector:
+      boolean:
+  presence_entity:
+    name: Presence Entity
+    description: "Select your presence entity (e.g. device_tracker.your_phone, group.all_devices, person.your_name)"
+    required: false
+    selector:
+      entity:
+  enable_delay:
+    name: Enable Energy-Saving Delay
+    description: "Add delay to prevent rapid HVAC cycling"
+    default: false
+    selector:
+      boolean:
+  delay_minutes:
+    name: Delay Duration (Minutes)
+    description: "Wait time before executing HVAC changes"
+    default: 5
+    selector:
+      number:
+        min: 1
+        max: 30
+        step: 1
 
-    season:
-      name: Select season
-      description: 'Select the season of use.'
-      default: Summer
-      selector:
-        select:
-          mode: dropdown
-          options:
-            - Summer
-            - Winter
-
-    set_temperature_climate:
-      name: Set temperature climate
-      default: 77
-      description: 'Select the temperature to be set at climate (°F).'
-      selector:
-        number:
-          min: 59
-          max: 86
-          unit_of_measurement: °F
-          mode: slider
-          step: 1
-
-    hvac_modes:
-      name: Hvac modes
-      description: 'Select the mode to be set to the air conditioner.'
-      default: dry
-      selector:
-        select:
-          mode: dropdown
-          options:
-            - heat
-            - cool
-            - dry
-            - fan_only
-
-    fan_modes:
-      name: Fan modes
-      description: 'Select the ventilation speed to be set at the air conditioner.'
-      default: auto
-      selector:
-        select:
-          mode: dropdown
-          options:
-            - auto
-            - high
-            - low
-            - mid
-
-    presence_home:
-      name: Presence Home
-      description: 'Select the group consisting of person.'
-      default: group.presence_home_disabled
-      selector:
-        entity:
-          domain: group
-
-    moisture:
-      name: Water level
-      default: binary_sensor.moisture_disabled
-      description: 'Select the binary_sensor used to measure the state of the water container.'
-      selector:
-        entity:
-          domain: binary_sensor
-          device_class: moisture
-
-    window:
-      name: Window
-      default: binary_sensor.window_disabled
-      description: 'Select the binary_sensor used for the window.'
-      selector:
-        entity:
-          domain: binary_sensor
-          device_class: window
-
-    target_temperature_start:
-      name: Target temperature start
-      default: 77
-      description: 'Set the startup target temperature (°F).'
-      selector:
-        number:
-          min: 59
-          max: 86
-          unit_of_measurement: °F
-          mode: slider
-          step: 1
-
-    target_temperature_stop:
-      name: Target temperature stop
-      default: 70
-      description: 'Set the target temperature for shutdown (°F).'
-      selector:
-        number:
-          min: 59
-          max: 86
-          unit_of_measurement: °F
-          mode: slider
-          step: 1
-
-    delay_temperature_stop:
-      default: 10
-      name: Delay temperature stop
-      description: 'Set the climate shutdown delay since the target temperature has been reached (min).'
-      selector:
-        number:
-          min: 0
-          max: 30
-          unit_of_measurement: min
-          mode: slider
-          step: 1
-
-    start_time:
-      name: Start time
-      default: "00:00:00"
-      description: 'Set automatic operation start time.'
-      selector:
-        time: 
-
-    stop_time:
-      name: Stop time
-      default: "00:00:00"
-      description: 'Set automatic operation end time.'
-      selector:
-        time: 
-
-    notify_device:
-      name: Device to notify push
-      default: false
-      description: 'Device needs to run the official Home Assistant app to receive notifications.'
-      selector:
-        device: 
-          integration: mobile_app
-
-mode: parallel
-variables:
-  season: !input season
-  target_temperature_start: !input target_temperature_start
-  climate: !input climate
-  target_temperature_stop: !input target_temperature_stop
-  window: !input window
-  presence_home: !input presence_home
 trigger:
-- platform: state
-  entity_id: !input moisture
-  from: 'off'
-  to: 'on'
-  id: moisture_notify
-- platform: state
-  entity_id: !input moisture
-  from: 'off'
-  to: 'on'
-  for:
-    minutes: 5
-  id: moisture_climate_off
-- platform: numeric_state
-  entity_id: !input climate
-  attribute: current_temperature
-  above: !input target_temperature_start
-  id: climate_on
-- platform: numeric_state 
-  entity_id: !input climate
-  attribute: current_temperature 
-  below: !input target_temperature_start
-  id: climate_on
-- platform: numeric_state
-  entity_id: !input climate
-  attribute: current_temperature 
-  below: !input target_temperature_stop
-  for: 
-    minutes: !input delay_temperature_stop
-  id: climate_off
-- platform: numeric_state
-  entity_id: !input climate
-  attribute: current_temperature 
-  above: !input target_temperature_stop
-  for: 
-    minutes: !input delay_temperature_stop
-  id: climate_off
-- platform: time
-  at: !input stop_time
-  id: climate_off
-- platform: time
-  at: !input start_time
-  id: climate_on
-- platform: state
-  entity_id: !input window
-  for:
-    seconds: 30
-  id: window
-- platform: state
-  entity_id: !input presence_home
-  from: 
-      - not_home
-      - home
-  to: 
-      - not_home
-      - home
-  id: presence_home
+  - platform: time
+    at: !input start_time
+  - platform: time
+    at: !input end_time
+
+condition: []
+
 action:
-- alias: Water tank full warning
-  if: 
-    - "{{ trigger.id == 'moisture_notify' and not is_state(climate,'off')}}"
-  then: 
-    - domain: mobile_app
-      type: notify
-      device_id: !input notify_device
-      title: "AIR CONDITIONER"
-      message: "Air conditioner water discharge container full, automatic shutdown in 5 minutes."
-- alias: Turn on climate
-  if:
-    - "{{is_state(climate,'off')}}"
-    - condition: time
-      after: !input start_time
-      before: !input stop_time
-    - "{{ states(presence_home) == 'home' or presence_home == 'group.presence_home_disabled'}}"
-    - or: 
-      - "{{ (trigger.id == 'climate_on' or trigger.id == 'window' or (trigger.id == 'presence_home' and trigger.to_state.state == 'home')) and season == 'Winter' and (state_attr(climate,'current_temperature')|float(0) < target_temperature_start|float(0) )}}"
-      - "{{ (trigger.id == 'climate_on' or trigger.id == 'window'or (trigger.id == 'presence_home' and trigger.to_state.state == 'home')) and season == 'Summer' and (state_attr(climate,'current_temperature')|float(0) > target_temperature_start|float(0) )}}"
-  then:
-      - alias: Window check
-        if: 
-          - " {{ window == 'binary_sensor.window_disabled' or states(window) == 'off'}}"
-        then: 
-          - service: climate.set_temperature
-            data:
-              entity_id: !input climate
-              temperature: !input set_temperature_climate
-              hvac_mode: !input hvac_modes
-          - delay: 
-              seconds: 1
-          - service: climate.set_fan_mode
-            data:
-              entity_id: !input climate
-              fan_mode: !input fan_modes
-          - domain: mobile_app
-            type: notify
-            device_id: !input notify_device
-            title: "AIR CONDITIONER"
-            message: "Turn on air conditioner performed, current temperature is {{state_attr(climate,'current_temperature')|float(0)}}°F."
-        else:
-          - domain: mobile_app
-            type: notify
-            device_id: !input notify_device
-            title: "AIR CONDITIONER"
-            message: "Turning on air conditioner not performed because you left the window open."
-- alias: Turn off climate
-  if: 
-    - "{{not is_state(climate,'off')}}"
-    - or: 
-      - "{{ trigger.id == 'presence_home' and trigger.to_state.state == 'not_home'}}"
-      - "{{ trigger.id == 'climate_off' and season == 'Winter' and (state_attr(climate,'current_temperature')|float(0) > target_temperature_stop|float(0) )}}"
-      - "{{ trigger.id == 'climate_off' and season == 'Summer' and (state_attr(climate,'current_temperature')|float(0) < target_temperature_stop|float(0) )}}"
-      - "{{ trigger.id == 'climate_off' and trigger.platform == 'time'}}"
-      - "{{ trigger.id == 'window' and is_state(window,'on')}}"
-      - "{{ trigger.id == 'moisture_climate_off' }}"
-  then:
-      - service: climate.turn_off
-        target:
-          entity_id: !input climate
-      - domain: mobile_app
-        type: notify
-        device_id: !input notify_device
-        title: "AIR CONDITIONER"
-        message: >-
-          {% if trigger.id == 'window' %}
-            Air conditioner turned off because the window was opened.
-          {% elif trigger.id == 'climate_off' or trigger.id == 'presence_home' %}
-            Automatic air conditioner shutdown.
-          {% elif trigger.id == 'moisture_climate_off' %}
-            Air conditioner off for water drain container full.
-          {% endif %}
+  - choose:
+      - conditions:
+          - condition: template
+            value_template: "{{ trigger.platform == 'time' and trigger.at == states[input.start_time].state }}"
+        sequence:
+          - if:
+              - condition: template
+                value_template: >
+                  {% if input.enable_presence_detection %}
+                    {{ is_state(input.presence_entity, 'home') if input.presence_entity is defined else false }}
+                  {% else %}
+                    true
+                  {% endif %}
+            then:
+              - if:
+                  - condition: template
+                    value_template: "{{ input.enable_delay }}"
+                then:
+                  - delay: !input delay_minutes
+              - service: climate.set_hvac_mode
+                target:
+                  entity_id: !input climate_entity
+                data:
+                  hvac_mode: !input hvac_mode_on
+              - service: climate.set_temperature
+                target:
+                  entity_id: !input climate_entity
+                data:
+                  temperature: !input target_temp_f
+              - if:
+                  - condition: template
+                    value_template: "{{ input.notify_service != '' }}"
+                then:
+                  - service: !input notify_service
+                    data:
+                      message: !input notify_message_on
+      - conditions:
+          - condition: template
+            value_template: "{{ trigger.platform == 'time' and trigger.at == states[input.end_time].state }}"
+        sequence:
+          - if:
+              - condition: template
+                value_template: >
+                  {% if input.enable_presence_detection %}
+                    {{ is_state(input.presence_entity, 'home') if input.presence_entity is defined else false }}
+                  {% else %}
+                    true
+                  {% endif %}
+            then:
+              - if:
+                  - condition: template
+                    value_template: "{{ input.enable_delay }}"
+                then:
+                  - delay: !input delay_minutes
+              - service: climate.set_hvac_mode
+                target:
+                  entity_id: !input climate_entity
+                data:
+                  hvac_mode: !input hvac_mode_off
+              - if:
+                  - condition: template
+                    value_template: "{{ input.notify_service != '' }}"
+                then:
+                  - service: !input notify_service
+                    data:
+                      message: !input notify_message_off
+    default: []
